--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@shopify/flash-list": "^1.3.1",
     "add": "^2.0.6",
     "axios": "0.26.0",
+    "i18next": "^22.4.9",
     "lottie-react-native": "^5.1.4",
     "react": "18.1.0",
     "react-hook-form": "^7.39.1",
+    "react-i18next": "^12.1.5",
     "react-native": "0.70.6",
     "react-native-element-dropdown": "^2.3.0",
     "react-native-fast-image": "^8.6.3",
