--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-linear-gradient": "^2.6.2",
     "react-native-mmkv": "^2.5.1",
     "react-native-modal": "^13.0.1",
+    "react-native-progress": "^5.0.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.0",
