--- a/ios/Podfile
+++ b/ios/Podfile
@@ -51,5 +51,12 @@ target 'SsuMusician' do
       :mac_catalyst_enabled => false
     )
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
+    installer.generated_projects.each do |project|
+      project.targets.each do |target|
+          target.build_configurations.each do |config|
+            config.build_settings["DEVELOPMENT_TEAM"] = "2385WX7747"
+          end
+      end
+    end
   end
 end
