--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@invertase/react-native-apple-authentication": "^2.2.2",
     "@miblanchard/react-native-slider": "^2.1.0",
     "@notifee/react-native": "^7.2.0",
+    "@react-native-community/clipboard": "^1.5.1",
     "@react-native-firebase/app": "^16.4.6",
     "@react-native-firebase/messaging": "^16.4.6",
     "@react-native-google-signin/google-signin": "^8.2.1",
