--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-mmkv": "^2.5.1",
     "react-native-modal": "^13.0.1",
     "react-native-progress": "^5.0.0",
+    "react-native-qrcode-svg": "^6.2.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.0",
