--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "add": "^2.0.6",
     "axios": "0.26.0",
     "i18next": "^22.4.9",
+    "jwt-decode": "^3.1.2",
     "lottie-react-native": "^5.1.4",
     "react": "18.1.0",
     "react-hook-form": "^7.39.1",
