change package and app name android

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -142,7 +142,7 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
-        applicationId "io.ssumusician.android"
+        applicationId "co.beam.artist.android"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode generateVersionCode()
