--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>234390427761-i2k4uvvnlcepmt8p3q9oouc60pr4j39t.apps.googleusercontent.com</string>
+	<string>234390427761-u68hklmj106d8nkge3jo4226scp41art.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.234390427761-i2k4uvvnlcepmt8p3q9oouc60pr4j39t</string>
+	<string>com.googleusercontent.apps.234390427761-u68hklmj106d8nkge3jo4226scp41art</string>
 	<key>ANDROID_CLIENT_ID</key>
 	<string>234390427761-4orps7fkenj3uqmj488e3c21oi4mcpk7.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>io.ssumusician.ios</string>
+	<string>co.beam.artist.ios</string>
 	<key>PROJECT_ID</key>
 	<string>ssu-artist</string>
 	<key>STORAGE_BUCKET</key>
@@ -31,6 +31,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:234390427761:ios:4814de75d62cd93629a3d0</string>
+	<string>1:234390427761:ios:aaf996708757c1eb29a3d0</string>
 </dict>
 </plist>
