update podfile and rename project ios

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,7 +4,7 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 platform :ios, '12.4'
 install! 'cocoapods', :deterministic_uuids => false
 
-target 'SsuMusician' do
+target 'Beamco for Artist' do
   config = use_native_modules!
 
   # Flags change depending on the env values.
@@ -38,7 +38,7 @@ target 'SsuMusician' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
-  target 'SsuMusicianTests' do
+  target 'Beamco for ArtistTests' do
     inherit! :complete
     # Pods for testing
   end
