--- a/package.json
+++ b/package.json
@@ -87,6 +87,9 @@
       "jsx",
       "json",
       "node"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!(@react-native|react-native|react-native-size-matters)/)"
     ]
   }
 }
