--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
       "node"
     ],
     "transformIgnorePatterns": [
-      "node_modules/(?!(@react-native|react-native|react-native-size-matters)/)"
+      "node_modules/(?!((jest-)?react-native(-.*)?|@react-native(-community)?)/)"
     ]
   }
 }
