--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-fbsdk-next": "^11.1.0",
     "react-native-get-random-values": "^1.8.0",
     "react-native-gifted-charts": "^1.2.42",
+    "react-native-iap": "^12.10.5",
     "react-native-image-crop-picker": "^0.38.1",
     "react-native-linear-gradient": "^2.7.3",
     "react-native-mmkv": "^2.5.1",
