--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-progress": "^5.0.0",
     "react-native-qrcode-svg": "^6.2.0",
+    "react-native-reanimated": "2.14.4",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.0",
@@ -53,9 +54,11 @@
     "react-native-swiper": "^1.6.0",
     "react-native-track-player": "^3.2.0",
     "react-native-video": "^6.0.0-alpha.4",
+    "react-native-vision-camera": "^2.15.4",
     "react-native-webview": "^11.25.0",
     "react-query": "^3.39.2",
     "uuid": "^9.0.0",
+    "vision-camera-code-scanner": "^0.2.0",
     "yarn": "^1.22.19",
     "yup": "^0.32.11",
     "zustand": "^4.1.5"
