--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -149,6 +149,7 @@ android {
         versionName generateVersionName()
         vectorDrawables.useSupportLibrary = true
         buildConfigField "boolean", "IS_NEW_ARCHITECTURE_ENABLED", isNewArchitectureEnabled().toString()
+        missingDimensionStrategy "store", "play"
 
         if (isNewArchitectureEnabled()) {
             // We configure the CMake build only if you decide to opt-in for the New Architecture.
