--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,7 +4,7 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 platform :ios, '12.4'
 install! 'cocoapods', :deterministic_uuids => false
 
-target 'Beamco for Artist' do
+target 'SsuMusician' do
   config = use_native_modules!
 
   # Flags change depending on the env values.
@@ -51,11 +51,11 @@ target 'Beamco for Artist' do
       :mac_catalyst_enabled => false
     )
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
-    installer.pods_project.targets.each do |target|
-      if target.name == "React-Codegen"
-        target.build_configurations.each do |config|
-            config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.4'
-        end
+    installer.generated_projects.each do |project|
+      project.targets.each do |target|
+          target.build_configurations.each do |config|
+            config.build_settings["DEVELOPMENT_TEAM"] = "2385WX7747"
+          end
       end
     end
   end
