--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
+    "@sentry/react-native": "^5.9.1",
     "@shopify/flash-list": "^1.3.1",
     "add": "^2.0.6",
     "axios": "0.26.0",
