--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-code-push": "^8.1.0",
     "react-native-date-picker": "^4.2.13",
     "react-native-device-info": "^10.6.0",
+    "react-native-draggable": "^3.3.0",
     "react-native-element-dropdown": "^2.3.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-fbsdk-next": "^11.1.0",
