--- a/package.json
+++ b/package.json
@@ -59,10 +59,12 @@
     "react-native-svg": "^13.9.0",
     "react-native-swiper": "^1.6.0",
     "react-native-track-player": "^3.2.0",
+    "react-native-version-check": "^3.4.7",
     "react-native-video": "^6.0.0-alpha.4",
     "react-native-vision-camera": "^2.16.1",
     "react-native-webview": "^11.25.0",
     "react-query": "^3.39.2",
+    "semver": "^7.5.4",
     "uuid": "^9.0.0",
     "vision-camera-code-scanner": "^0.2.0",
     "yarn": "^1.22.19",
@@ -78,6 +80,7 @@
     "@types/jest": "^26.0.23",
     "@types/react": "^18.0.21",
     "@types/react-native": "^0.70.6",
+    "@types/react-native-version-check": "^3.4.5",
     "@types/react-native-video": "^5.0.14",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
