--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "react-native-track-player": "^3.2.0",
     "react-native-version-check": "^3.4.7",
     "react-native-video": "^6.0.0-alpha.4",
-    "react-native-vision-camera": "^2.16.1",
+    "react-native-vision-camera": "2.15.4",
     "react-native-webview": "^11.25.0",
     "react-query": "^3.39.2",
     "semver": "^7.5.4",
