--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@shopify/flash-list": "^1.3.1",
     "add": "^2.0.6",
     "axios": "0.26.0",
+    "buffer": "^6.0.3",
     "dayjs": "^1.11.9",
     "i18next": "^22.4.9",
     "jwt-decode": "^3.1.2",
