--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native": "0.70.6",
     "react-native-background-actions": "^3.0.0",
     "react-native-code-push": "^8.1.0",
+    "react-native-copilot": "^3.2.1",
     "react-native-date-picker": "^4.2.13",
     "react-native-device-info": "^10.6.0",
     "react-native-draggable": "^3.3.0",
