--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-get-random-values": "^1.8.0",
     "react-native-gifted-charts": "^1.2.42",
     "react-native-iap": "^12.10.8",
+    "react-native-image-colors": "1.5.2",
     "react-native-image-crop-picker": "^0.38.1",
     "react-native-linear-gradient": "^2.7.3",
     "react-native-mmkv": "^2.5.1",
@@ -58,6 +59,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.0",
+    "react-native-share": "^10.0.1",
     "react-native-size-matters": "^0.4.0",
     "react-native-svg": "^13.9.0",
     "react-native-swiper": "^1.6.0",
@@ -65,6 +67,7 @@
     "react-native-ultimate-config": "^6.0.1",
     "react-native-version-check": "^3.4.7",
     "react-native-video": "^6.0.0-alpha.4",
+    "react-native-view-shot": "^3.8.0",
     "react-native-vision-camera": "2.15.4",
     "react-native-webview": "^11.25.0",
     "react-query": "^3.39.2",
