--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "SsuMusician",
+  "name": "BeamcoArtist",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -11,71 +11,64 @@
   },
   "dependencies": {
     "@gorhom/portal": "^1.0.14",
-    "@hookform/resolvers": "^2.9.10",
-    "@invertase/react-native-apple-authentication": "^2.2.2",
-    "@miblanchard/react-native-slider": "^2.1.0",
-    "@notifee/react-native": "^7.2.0",
+    "@hookform/resolvers": "^3.3.2",
+    "@invertase/react-native-apple-authentication": "^2.3.0",
+    "@miblanchard/react-native-slider": "^2.3.1",
+    "@notifee/react-native": "^7.8.0",
     "@react-native-community/clipboard": "^1.5.1",
-    "@react-native-firebase/app": "^16.4.6",
-    "@react-native-firebase/messaging": "^16.4.6",
-    "@react-native-google-signin/google-signin": "^8.2.1",
-    "@react-navigation/bottom-tabs": "^6.4.0",
-    "@react-navigation/native": "^6.0.13",
-    "@react-navigation/native-stack": "^6.9.0",
-    "@sentry/react-native": "^5.9.1",
-    "@shopify/flash-list": "^1.3.1",
-    "add": "^2.0.6",
+    "@react-native-firebase/app": "^18.7.1",
+    "@react-native-firebase/messaging": "^18.7.1",
+    "@react-native-google-signin/google-signin": "^10.1.1",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@sentry/react-native": "^5.14.1",
+    "@shopify/flash-list": "^1.6.3",
     "axios": "0.26.0",
-    "buffer": "^6.0.3",
-    "dayjs": "^1.11.9",
-    "i18next": "^22.4.9",
-    "jwt-decode": "^3.1.2",
-    "lottie-react-native": "^5.1.4",
-    "react": "18.1.0",
-    "react-hook-form": "^7.39.1",
-    "react-i18next": "^12.1.5",
-    "react-native": "0.70.6",
-    "react-native-background-actions": "^3.0.0",
+    "buffer": "6.0.3",
+    "dayjs": "^1.11.10",
+    "i18next": "^23.7.6",
+    "jwt-decode": "3.1.2",
+    "lottie-react-native": "^6.4.1",
+    "react": "18.2.0",
+    "react-hook-form": "^7.48.2",
+    "react-i18next": "^13.5.0",
+    "react-native": "0.72.7",
+    "react-native-background-actions": "^3.0.1",
     "react-native-code-push": "^8.1.0",
     "react-native-copilot": "^3.2.1",
-    "react-native-date-picker": "^4.2.13",
-    "react-native-device-info": "^10.6.0",
+    "react-native-date-picker": "^4.3.3",
+    "react-native-device-info": "^10.11.0",
     "react-native-draggable": "^3.3.0",
-    "react-native-element-dropdown": "^2.3.0",
+    "react-native-element-dropdown": "^2.10.0",
     "react-native-fast-image": "^8.6.3",
-    "react-native-fbsdk-next": "^11.1.0",
-    "react-native-get-random-values": "^1.8.0",
-    "react-native-gifted-charts": "^1.2.42",
-    "react-native-iap": "^12.10.8",
-    "react-native-image-colors": "1.5.2",
-    "react-native-image-crop-picker": "^0.38.1",
-    "react-native-linear-gradient": "^2.7.3",
-    "react-native-mmkv": "^2.5.1",
+    "react-native-get-random-values": "^1.10.0",
+    "react-native-gifted-charts": "^1.3.23",
+    "react-native-iap": "^12.11.0",
+    "react-native-image-crop-picker": "^0.40.2",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-mmkv": "^2.11.0",
     "react-native-modal": "^13.0.1",
-    "react-native-progress": "^5.0.0",
+    "react-native-progress": "^5.0.1",
     "react-native-qrcode-svg": "^6.2.0",
-    "react-native-reanimated": "2.14.4",
+    "react-native-reanimated": "^3.6.0",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.0",
-    "react-native-share": "^10.0.1",
-    "react-native-size-matters": "^0.4.0",
-    "react-native-svg": "^13.9.0",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0",
+    "react-native-size-matters": "^0.4.2",
+    "react-native-svg": "^14.0.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-track-player": "^3.2.0",
+    "react-native-track-player": "^4.0.1",
     "react-native-ultimate-config": "^6.0.1",
     "react-native-version-check": "^3.4.7",
-    "react-native-video": "^6.0.0-alpha.4",
-    "react-native-view-shot": "^3.8.0",
-    "react-native-vision-camera": "2.15.4",
-    "react-native-webview": "^11.25.0",
-    "react-query": "^3.39.2",
+    "react-native-video": "^5.2.1",
+    "react-native-vision-camera": "^3.6.11",
+    "react-native-webview": "^13.6.3",
+    "react-query": "^3.39.3",
     "semver": "^7.5.4",
-    "uuid": "^9.0.0",
-    "vision-camera-code-scanner": "^0.2.0",
-    "yarn": "^1.22.19",
-    "yup": "^0.32.11",
-    "zustand": "^4.1.5"
+    "uuid": "^9.0.1",
+    "yup": "0.32.11",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
