--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-get-random-values": "^1.10.0",
     "react-native-gifted-charts": "^1.3.23",
     "react-native-iap": "^12.11.0",
+    "react-native-image-colors": "1.5.2",
     "react-native-image-crop-picker": "^0.40.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-mmkv": "^2.11.0",
@@ -55,6 +56,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
+    "react-native-share": "^10.0.1",
     "react-native-size-matters": "^0.4.2",
     "react-native-svg": "^14.0.0",
     "react-native-swiper": "^1.6.0",
@@ -62,6 +64,7 @@
     "react-native-ultimate-config": "^6.0.1",
     "react-native-version-check": "^3.4.7",
     "react-native-video": "^5.2.1",
+    "react-native-view-shot": "^3.8.0",
     "react-native-vision-camera": "^3.6.11",
     "react-native-webview": "^13.6.3",
     "react-query": "^3.39.3",
