--- a/ios/beamcoArtist/Info.plist
+++ b/ios/beamcoArtist/Info.plist
@@ -54,6 +54,7 @@
 	<string></string>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>audio</string>
 		<string>fetch</string>
 		<string>processing</string>
 		<string>remote-notification</string>
